# RACS-tools

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile-mpich  Dockerfile-ompi  Dockerfile-ubuntu  Dockerfile.mpich  LICENSE  README.md  au2.py  beamcon_2D.py  beamcon_3D.py  environment.yml  getnoise_list.py  pyproject.toml  setup.py
.github/workflows/: CI.yaml  black.yml  docker.yml  pylint.yml  pypi.yml  pytest.yml  python-package.yml  python-publish.yml
racs_tools/: au2.py  beamcon_2D.py  beamcon_3D.py  convolve.f  convolve_uv.py  gaussft.f  gaussft.py  getnoise_list.py  logging.py  parallel.py
src/: lib.rs
tests/: hellompi.py  test_2d.py  test_3d.py  test_noise.py  test_spectral.py
