[project]
name = "racs-tools"
version = "0.0.0"  # maturin can also use git/dynamic versions if needed
description = "Useful scripts for RACS."
authors = [{ name = "Alec Thomson" }]
license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=2",
  "astropy>=6",
  "radio_beam>=0.3.8",
  "scipy",
  "spectral_cube>=0.6.3",
  "tqdm",
  "numba",
]

[project.optional-dependencies]
mpi = ["mpi4py>=3"]

[project.scripts]
beamcon_2D = "racs_tools.beamcon_2D:cli"
beamcon_3D = "racs_tools.beamcon_3D:cli"
getnoise_list = "racs_tools.getnoise_list:cli"

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
# If your Rust crate lives inside racs_tools/
manifest-path = "Cargo.toml"
module-name = "racs_tools.gaussft_rs"

[tool.ruff]
src = ["racs_tools"]

[tool.ruff.lint]
extend-select = [
  "I",   # isort
  "ARG", # flake8-unused-arguments
  "ICN", # flake8-import-conventions
  "UP",  # pyupgrade
]
